working on unit testing

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 			<label for="code">Code</label>
 			<input type="text" id="code" name="code"><br><br>
 			<input type="submit" value="Submit">
+		</form>
 	</div>
 	<div id="display">
 
